[package]
name = "bevy-suis"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["xr"]
xr = []

[dependencies]
bevy = "0.15"
bevy_mod_xr = "0.2"
schminput = { git = "https://github.com/Schmarni-Dev/schminput", features = [
	"xr",
], branch = "action_set_priorities" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy_mod_openxr = "0.2"
openxr = { version = "0.19.0", default-features = false }

[dev-dependencies]
bevy_xr_utils = "0.2"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[workspace]
members = ["bevy-suis-explicit-method-data"]
