[package]
name = "bevy-suis"
version = "0.2.0"
edition = "2024"
license = "MIT"

[features]
default = ["xr"]
xr = []

[dependencies]
bevy = "0.16"
bevy_mod_xr = "0.3"
schminput = { git = "https://github.com/Schmarni-Dev/schminput", features = [
	"xr",
], branch = "main" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy_mod_openxr = "0.3"
openxr = { version = "0.19.0", default-features = false }

[dev-dependencies]
bevy_xr_utils = "0.3"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[workspace]
members = ["bevy-suis-explicit-method-data"]
