[package]
name = "bevy-suis"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["xr"]
xr = []

[dependencies]
bevy = "0.16"
bevy_mod_xr = "0.3"
schminput = { version = "0.3", features = ["xr"] }

[dev-dependencies]
bevy_mod_openxr = "0.3"
openxr = "0.19"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[workspace]
members = ["bevy-suis-explicit-method-data"]
